--- a/elements/gaia-header/bower.json
+++ b/elements/gaia-header/bower.json
@@ -1,24 +1,29 @@
 {
   "name": "gaia-header",
-  "version": "0.3.12",
+  "version": "0.4.1",
   "homepage": "https://github.com/gaia-components/gaia-header",
   "authors": [
     "Wilson Page <wilsonpage@me.com>"
   ],
-  "main": "script.js",
+  "main": "gaia-header.js",
   "license": "MIT",
   "ignore": [
     "**/.*",
+    "!.jshintrc",
     "node_modules",
     "bower_components",
     "test",
-    "tests",
     "index.html",
-    "karma.conf.js",
     "package.json",
     "README.md"
   ],
   "dependencies": {
-    "gaia-icons": "gaia-components/gaia-icons#~0.5.0"
+    "gaia-icons": "gaia-components/gaia-icons#~0.7.0",
+    "pressed": "gaia-components/pressed#~0.1.0"
+  },
+  "devDependencies": {
+    "gaia-theme": "gaia-components/gaia-theme#~0.3.0",
+    "gaia-fonts": "gaia-components/gaia-fonts#~0.2.1",
+    "base": "gaia-components/base"
   }
 }
