--- a/elements/gaia-theme/bower.json
+++ b/elements/gaia-theme/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gaia-theme",
-  "version": "0.2.3",
+  "version": "0.4.1",
   "homepage": "https://github.com/gaia-components/gaia-theme",
   "authors": [
     "Wilson Page <wilsonpage@me.com>"
@@ -8,6 +8,7 @@
   "license": "MIT",
   "ignore": [
     "**/.*",
+    "!.jshintrc",
     "node_modules",
     "bower_components",
     "test",
