--- a/elements/gaia-header/bower.json
+++ b/elements/gaia-header/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gaia-header",
-  "version": "0.4.2",
+  "version": "0.5.1",
   "homepage": "https://github.com/gaia-components/gaia-header",
   "authors": [
     "Wilson Page <wilsonpage@me.com>"
@@ -19,11 +19,11 @@
   ],
   "dependencies": {
     "gaia-icons": "gaia-components/gaia-icons#~0.7.0",
-    "pressed": "gaia-components/pressed#~0.1.0"
+    "gaia-component": "gaia-components/gaia-component#~0.1.3"
   },
   "devDependencies": {
-    "gaia-theme": "gaia-components/gaia-theme#~0.3.0",
-    "gaia-fonts": "gaia-components/gaia-fonts#~0.2.1",
+    "gaia-theme": "gaia-components/gaia-theme",
+    "gaia-fonts": "gaia-components/gaia-fonts",
     "base": "gaia-components/base"
   }
 }
