--- a/elements/gaia-component/bower.json
+++ b/elements/gaia-component/bower.json
@@ -1,9 +1,10 @@
 {
   "name": "gaia-component",
-  "version": "0.1.4",
+  "version": "0.2.1",
   "authors": [
     "Wilson Page <wilsonpage@me.com>"
   ],
+  "main": "gaia-component.js",
   "license": "MIT",
   "ignore": [
     "**/.*",
