--- a/elements/gaia-site-icon/bower.json
+++ b/elements/gaia-site-icon/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "gaia-site-icon",
+  "version": "0.0.0",
   "description": "A web component to show an icon for an application or site.",
   "authors": [
     "Chris Lord <chrislord.net@gmail.com>"
@@ -19,15 +20,5 @@
     "bower_components",
     "test",
     "tests"
-  ],
-  "homepage": "https://github.com/gaia-components/gaia-site-icon",
-  "_release": "a77175df04",
-  "_resolution": {
-    "type": "branch",
-    "branch": "master",
-    "commit": "a77175df04655c5c5a730d0655bc7bf7c4ccfd55"
-  },
-  "_source": "git://github.com/gaia-components/gaia-site-icon.git",
-  "_target": "*",
-  "_originalSource": "gaia-components/gaia-site-icon"
+  ]
 }
